Add implNote to ThreadImpl to explain why it uses reflection